fixed minor mistakes

--- a/Termin 03/web-api/Pipfile
+++ b/Termin 03/web-api/Pipfile
@@ -9,6 +9,8 @@ python-dotenv = "*"
 flask-pymongo = "*"
 pydantic = "*"
 flask-cors = "*"
+mailtrap = "*"
+email-validator = "*"
 
 [dev-packages]
 
